--- a/views/user/emptycart.ejs
+++ b/views/user/emptycart.ejs
@@ -6,7 +6,7 @@
         <div class="col-12 col-sm-5 m-auto">
             <img class="img-fluid" src="/assests/cart.gif" alt="">
          <div class="col-12 text-center">
-              <a href="/furnica/home">
+              <a href="/">
                     <h5>continue more shopping</h5></a>
          </div> 
            
