--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -19,7 +19,7 @@
     <!-- =============================== -->
     <section class="vh-100 login_main mt-4">
       <div class="container h-100">
-        <a href="/furnica/home">
+        <a href="/home">
           <img class="mt-2" src="/assests/logo.png" alt="" style="position: absolute;top: 10px;z-index:1;"
         /></a>
         <div class="row d-flex justify-content-center align-items-center ">
@@ -48,7 +48,7 @@
                     <!--  -->
                     <form
                       class="mx-1 mx-md-4"
-                      action="/furnica/signup"
+                      action="/signup"
                       method="post"
                       id="form"
                       onsubmit="validate()"
@@ -169,7 +169,7 @@
                              <input type="text" value="<%= locals.refferalcode  %>"  class="form-control" name="referral" id="referral" placeholder="Refferal">
                         </div>
                      <div class="col-6">
-<a href="/furnica/forgotPassword">
+<a href="/forgotPassword">
                           <p class="text-end">Forgot password</p></a>
                      </div>
                         
@@ -200,7 +200,7 @@
                         >
                           <p>
                             Alredy have an account?
-                            <a class="small" href="/furnica/login">Login</a>
+                            <a class="small" href="/login">Login</a>
                           </p>
                         </label>
                       </div>
