--- a/views/user/successorder.ejs
+++ b/views/user/successorder.ejs
@@ -12,6 +12,6 @@
 <%- include('../htmlbody/footer') -%>
 <script>
   setTimeout((e) => {
-    window.location.href = "/furnica/home";
+    window.location.href = "/";
   }, 3000);
 </script>
