--- a/views/htmlbody/navbar.ejs
+++ b/views/htmlbody/navbar.ejs
@@ -50,7 +50,7 @@ right: 0;
 
 
       <div class="col-6 col-sm-2 px-1">
-        <a class="navbar-brand" href="/furnica/home">
+        <a class="navbar-brand" href="/">
       
         <img class="img-fluid " style="width: 70%;" src="/assests/logo11.png" alt="">
         </a>    
@@ -75,11 +75,11 @@ right: 0;
       <ul class="navbar-nav d-flex" >
    
         <li  class="nav-item active ">
-          <a class="nav-link" href="/furnica/cart"><i style="font-size: 1.5rem;" class="fa-solid fa-cart-shopping"></i>   <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/cart"><i style="font-size: 1.5rem;" class="fa-solid fa-cart-shopping"></i>   <span class="sr-only">(current)</span></a>
         </li>
 
         <li class="nav-item active">
-          <a class="nav-link" href="/furnica/wishlist">    <i style="font-size: 1.5rem;" class="fa-solid fa-heart"></i></a>
+          <a class="nav-link" href="/wishlist">    <i style="font-size: 1.5rem;" class="fa-solid fa-heart"></i></a>
         </li>
         
         <li class="nav-item dropdown active">
@@ -90,26 +90,26 @@ right: 0;
           <!-- <div class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink"> -->
           
     <% if (locals.userdata ) { %>
-      <a href="/furnica/profile" style="text-decoration: none;color: black;">
+      <a href="/profile" style="text-decoration: none;color: black;">
    <button class="dropdown-item" type="button">Profile</button> </a>
     <% } %>
       
     <% if (locals.userdata ) { %>
-     <a href="/furnica/orderslist" style="text-decoration: none;color: black;"><button class="dropdown-item" type="button">Orders</button> </a>
+     <a href="/orderslist" style="text-decoration: none;color: black;"><button class="dropdown-item" type="button">Orders</button> </a>
    <% } %>
    
    
      <% if (!locals.userdata ) { %>
-     <a href="/furnica/login" style="text-decoration: none;color: black;">   <button class="dropdown-item" type="button">Login</button>    </a>
+     <a href="/login" style="text-decoration: none;color: black;">   <button class="dropdown-item" type="button">Login</button>    </a>
      <% } %>
     
      <% if (!locals.userdata ) { %>
-       <a href="/furnica/signup" style="text-decoration: none;color: black;">   <button class="dropdown-item" type="button">Signup</button>    </a>
+       <a href="/signup" style="text-decoration: none;color: black;">   <button class="dropdown-item" type="button">Signup</button>    </a>
     <% } %>
  
  
    <% if (locals.userdata ) { %>
-     <a style="text-decoration: none;color: black;" href="/furnica/logout">   
+     <a style="text-decoration: none;color: black;" href="/logout">   
        <button class="dropdown-item" type="button">Logout</button>    </a>
   <% } %>
           </div>
@@ -139,7 +139,7 @@ const handleproduct=()=>{
     localStorage.setItem('categoryId', JSON.stringify(""));
     localStorage.setItem('sortType', JSON.stringify(""));
     localStorage.setItem('search', JSON.stringify(""));
-    const url=`/furnica/Allproducts?page=${pagevalue}`
+    const url=`/Allproducts?page=${pagevalue}`
           window.location.href = url;
 }
     // 
@@ -152,7 +152,7 @@ localStorage.setItem('search', JSON.stringify(searchinput));
 pagevalue= 1;
     localStorage.setItem('page', JSON.stringify(pagevalue));
 if(searchinput){
-  const url = `/furnica/sorting?search=${searchinput}&category=${categoryId ||''}&sortBy=${sortValue}&sortOrder=${sortedtype}&page=${pagevalue}`;
+  const url = `/sorting?search=${searchinput}&category=${categoryId ||''}&sortBy=${sortValue}&sortOrder=${sortedtype}&page=${pagevalue}`;
           window.location.href = url;
 }
 
