--- a/views/user/emptywishlist.ejs
+++ b/views/user/emptywishlist.ejs
@@ -4,7 +4,7 @@
   <div class="col-12 col-sm-5 m-auto">
     <img class="img-fluid" src="/assests/cart.gif" alt="" />
     <div class="col-12 text-center">
-      <a href="/furnica/home"> <h5>add to wishlist</h5></a>
+      <a href="/"> <h5>add to wishlist</h5></a>
     </div>
   </div>
 </div>
