--- a/views/user/error.ejs
+++ b/views/user/error.ejs
@@ -7,7 +7,7 @@
      
       <h3 style="color: rgb(226, 82, 82)"> <%= locals.error  %></h3>
       <p>Please try again later.</p>
-      <button class="btn" onclick="window.location.href='/furnica/home'">
+      <button class="btn" onclick="window.location.href='/'">
         Go to Homepage
       </button>
     </div>
