--- a/views/user/forgotpassword/mailSubmittion.ejs
+++ b/views/user/forgotpassword/mailSubmittion.ejs
@@ -38,7 +38,7 @@
                   <div class="col-md-6 col-lg-6 col-xl-5 order-2 order-lg-1">
                     <p class="h2 mb-5 me-auto mx-1 mx-md-2 mt-4">Email</p>
 
-                    <form action="/furnica/forgotPassword" method="post">
+                    <form action="/forgotPassword" method="post">
                       <div class="d-flex flex-row align-items-center mb-2">
                         <div class="flex-fill mb-0">
                           <label class="ms-auto mb-3">Registered email</label>
