--- a/views/user/forgotpassword/otpPage.ejs
+++ b/views/user/forgotpassword/otpPage.ejs
@@ -43,7 +43,7 @@
                   <div class="col-md-6 col-lg-6 col-xl-5 order-2 order-lg-1">
                     <p class="h2 mb-5 me-auto mx-1 mx-md-4 mt-4">OTP</p>
 
-                    <form method="post" action="/furnica/otp">
+                    <form method="post" action="/otp">
                       <div class="form-outline mb-4">
                         <input
                           type="text"
@@ -79,7 +79,7 @@
                             onclick="setTime()"
                           >
                           
-                            <a class="mt-3" href="/furnica/otpResend">
+                            <a class="mt-3" href="/otpResend">
                               resend
                             </a>
                           </button>
