--- a/views/user/forgotpassword/resetPassword.ejs
+++ b/views/user/forgotpassword/resetPassword.ejs
@@ -17,7 +17,7 @@
 <body>
     <section class="vh-100 login_main">
         <div class="container h-100">
-            <a href="/furnica/home">
+            <a href="/">
             <img class="mt-2" src="/assests/logo.png" alt=""></a>
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-lg-12 col-xl-11 m-auto">
@@ -37,7 +37,7 @@
                                     <!--  -->
                                     <form
                       class="mx-1 mx-md-4"
-                      action="/furnica/resetPassword"
+                      action="/resetPassword"
                       method="post"
                     >
                       <div class="d-flex flex-row align-items-center mb-2">
@@ -94,7 +94,7 @@
                         >
                           <p>
                             Alredy have an account?
-                            <a class="small" href="/furnica/login">Login</a>
+                            <a class="small" href="/login">Login</a>
                           </p>
                         </label>
                       </div>
