--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -18,7 +18,7 @@
   <body>
     <section class="vh-100 login_main">
       <div class="container h-100">
-        <a href="/furnica/home">
+        <a href="/home">
           <img class="mt-2" src="/assests/logo.png" alt="" style="position: absolute;top: 10px;"
         /></a>
         <div class="row d-flex justify-content-center align-items-center h-100">
@@ -49,7 +49,7 @@
                     <!--  -->
                     <form
                       class="mx-1 mx-md-4"
-                      action="/furnica/login"
+                      action="/login"
                       method="post"
                     >
                       <div class="d-flex flex-row align-items-center mb-2">
@@ -90,7 +90,7 @@
                       </div>
                       <div class="form-check text-end">
                         <label class="form-check-label" for="form2Example3">
-                          <a href="/furnica/forgotPassword">
+                          <a href="/forgotPassword">
                             <p>Forgot password</p>
                           </a>
                         </label>
@@ -123,7 +123,7 @@
                         >
                           <p>
                             Create new account?
-                            <a class="small" href="/furnica/signup">signup</a>
+                            <a class="small" href="/signup">signup</a>
                           </p>
                         </label>
                       </div>
