--- a/views/user/otpsubmit.ejs
+++ b/views/user/otpsubmit.ejs
@@ -41,7 +41,7 @@
                     <p class="h2 mb-5 m-auto text-center">OTP</p>
 
                     <!--  -->
-                    <form method="post" action="/furnica/getOtp">
+                    <form method="post" action="/getOtp">
                       <div class="form-outline mb-4">
                         <input
                           type="text"
@@ -72,7 +72,7 @@
                             class="btn rounded-pill"
                             style="background-color: grey"
                             onclick="setTime()">
-                            <a class="mt-3" href="/furnica/resendOtp">
+                            <a class="mt-3" href="/resendOtp">
                               resend
                             </a>
                           </button>
@@ -129,8 +129,6 @@
 
   (function () {
     const startTime = new Date(localStorage.getItem("startsignupTime"));
-    console.log("startTime======",startTime)
-
     const timer = document.getElementById("timer");
     const resend = document.getElementById("resend_btn");
     const otp_btn = document.getElementById("otp_btn");
